5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1807_2566.log
== TEST (2019-06-10 22:08:20) 
-- CODE:
from numpy import*

fa=array(eval(inpur("")))

a=zeros(6,dtype=int)

for i in range(fa):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(a*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:08:39) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(fa):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(a*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:09:32) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(a*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:10:01) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(a*10)
-- EXECUTION TIME:
1.25876
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30  0  0 30 40 60]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10 20 40 50 50 80]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20 10 30 10 20 40]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:11:40) 
-- CODE:
from numpy import*
from math import*
fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(arenge(a*10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:12:18) 
-- CODE:
from numpy import*
from math import*
fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(a*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:14:23) 
-- CODE:
from numpy import*
from math import*
fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
b=arange(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:20:05) 
-- CODE:
from numpy import*
from math import*
fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(round(a*(100/size(fa))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:25:57) 
-- CODE:
from numpy import*
from math import*
fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print((a*100)/size(fa))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:26:38) 
-- CODE:
from numpy import*
from math import*
fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
print(round((a*100)/size(fa),1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:27:49) 
-- CODE:
from numpy import*
from math import*
fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
w=(a*100)/size(fa)
print(round(w,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:28:08) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
w=(a*100)/size(fa)
print(round(w,1))
-- EXECUTION TIME:
1.19634
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 21, in <module>
    print(round(w,1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:28:24) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
w=(a*100)/size(fa)
print(round(w,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:45:57) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=rond(a[w]*100/size(fa),1)
	
print(a

-- ERROR:
File "XXXX", line 24
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:46:10) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=rond(a[w]*100/size(fa),1)
	
print(a)

-- EXECUTION TIME:
1.21178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 21, in <module>
    a[w]=rond(a[w]*100/size(fa),1)
NameError: name 'rond' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:46:15) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=rond(a[w]*100/size(fa),1)
	
print(a)

-- EXECUTION TIME:
1.25463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 21, in <module>
    a[w]=rond(a[w]*100/size(fa),1)
NameError: name 'rond' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:46:44) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=ronud(a[w]*100/size(fa),1)
	
print(a)

-- EXECUTION TIME:
1.12173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 21, in <module>
    a[w]=ronud(a[w]*100/size(fa),1)
NameError: name 'ronud' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:46:49) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),1)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:46:52) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),1)
	
print(a)

-- EXECUTION TIME:
0.957364
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:48:18) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),1)
	
print(a)

-- EXECUTION TIME:
1.19999
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:48:20) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),1)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:49:06) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),1)
	
print(a)

-- EXECUTION TIME:
1.21864
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:49:12) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),1)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:49:33) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:50:16) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(fa)):
	a[w]=round(a[w]*100/size(fa),2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:50:44) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(fa)):
	a[w]=round(a[w]*100/size(fa),2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:51:34) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:51:56) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:52:33) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for w in range(size(a)):
	a[w]=round(a[w]*100/size(fa),2)
	
print(a)

-- EXECUTION TIME:
0.947716
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:02:55) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- EXECUTION TIME:
1.20216
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:04:02) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6,dtype=int)

for i in fa:
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- EXECUTION TIME:
1.11476
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 62  0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0  4 64 32  0  0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0 15 38 15 30  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:04:11) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in fa:
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:04:17) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in fa:
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- EXECUTION TIME:
1.30394
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 62.5   0.  ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.   15.38 38.46 15.38 30.77  0.  ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:04:23) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in fa:
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:04:58) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- EXECUTION TIME:
1.17537
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38  7.69 23.08  7.69 15.38 30.77]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:05:03) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- EXECUTION TIME:
1.15637
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38  7.69 23.08  7.69 15.38 30.77]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:05:11) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:05:23) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,2)
	
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:05:56) 
-- CODE:
from numpy import*

fa=array(eval(input("")))

a=zeros(6)

for i in range(size(fa)):
	if fa[i]==2:
		a[0]+=1
	if fa[i]==3:
		a[1]+=1
	if fa[i]==4:
		a[2]+=1
	if fa[i]==5:
		a[3]+=1
	if fa[i]==6:
		a[4]+=1
	if fa[i]==7:
		a[5]+=1
for i in range(size(a)):
	a[i]=round(a[i]/size(fa)*100,1)
	
print(a)

-- EXECUTION TIME:
1.06317
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
